--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         </title>
     </head>
     <body>
-        WELCOME TO JAVASCRIPT
+        <h1 style="color:rebeccapurple;">WELCOME TO JAVASCRIPT</h1>
     </body>
 </html>
