--- a/index.html
+++ b/index.html
@@ -8,4 +8,7 @@
     <body>
         <h1 style="color:rebeccapurple;">WELCOME TO JAVASCRIPT</h1>
     </body>
+    <script>
+        console.log("welcome to programming");  
+    </script>
 </html>
