inline javascript method added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         </title>
     </head>
     <body>
-        <h1 style="color:rebeccapurple;">WELCOME TO JAVASCRIPT</h1>
+        <h1 onclick='javascript:alert(1);'' style="color:rebeccapurple;">WELCOME TO JAVASCRIPT</h1>
     </body>
     <script>
         console.log("welcome to programming");  
