--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1 onclick='javascript:alert(1);'' style="color:rebeccapurple;">WELCOME TO JAVASCRIPT</h1>
     </body>
-    <script>
-        console.log("welcome to programming");  
+    <script src=" js/myscript.js">
+     
     </script>
 </html>
