just datatypes added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <body>
         <h1 onclick='javascript:alert(1);'' style="color:rebeccapurple;">WELCOME TO JAVASCRIPT</h1>
     </body>
-    <script src=" js/myscript.js">
+    <script >
      
+     names = [ "anu","ammu", "aika", "avin", "vinu"]
+
+     console.log(names)
     </script>
 </html>
