--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
         <h1 onclick='javascript:alert(1);'' style="color:rebeccapurple;">WELCOME TO JAVASCRIPT</h1>
     </body>
     <script >
-     
+     var  fruit = 'apple';
+     if (fruit=="apple"){
+         console.log("it is apple")
+     }
+     else{
+         console.log("some other fruit")
+     }
   
      console.log(names)
     </script>
