if else condition id smoothly working

--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
         <h1 onclick='javascript:alert(1);'' style="color:rebeccapurple;">WELCOME TO JAVASCRIPT</h1>
     </body>
     <script >
-     var  fruit = 'apple';
+     var  fruit = 'grape';
      if (fruit=="apple"){
          console.log("it is apple")
      }
-     else{
-         console.log("some other fruit")
+     else if(fruit =="orange") 
+     {
+         console.log("it is orange")
+     }
+     else if (fruit== "banana"){
+        console.log("it is banana")
      }
   
-     console.log(names)
+        else{
+            console.log("some other fruit")
+        }
     </script>
 </html> 
