while condition added

--- a/index.html
+++ b/index.html
@@ -6,22 +6,13 @@
         </title>
     </head>
     <body>
-        <h1 onclick='javascript:alert(1);'' style="color:rebeccapurple;">Switch</h1>
+        <h1 onclick='javascript:alert(1);'' style="color:rebeccapurple;">Looping</h1>
     </body>
     <script >
-     var  fruit = 'grape';
-     switch (fruit){
-         case "apple": console.log("it is apple")
-         break;
-     
-         case "orange": console.log("it is orange")
-         break;
-
-        case  "banana":console.log("it is banana")
-        break;
-    
-  
-       default: console.log("some other fruit")
-    }
+     var  i=1;
+     while(i<=10){
+         console.log(i)
+         i+1;
+     }
     </script>
 </html> 
