--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script >
      var  i=1;
      while(i<=10){
-         console.log(i)
+         console.log(i);
          i+1;
      }
     </script>
