--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <body>
         <h1 onclick='javascript:alert(1);'' style="color:rebeccapurple;">Looping</h1>
     
-    <script >
-     var  i = 1;
-     while (i<=10) {
-         console.log(i);
-         i+1;
-     }
-    </script>
+      <script >
+         var  i = 100;
+         var count=0;
+        while(i<count) {
+           console.log("*");
+             i++;
+      }
+        </script>
     </body>
 </html> 
