--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         <h1 onclick='javascript:alert(1);'' style="color:rebeccapurple;">Looping</h1>
     
       <script >
-         var  i = 100;
-         var count=0;
+         var  count = 100;
+         var i =0;
         while(i<count) {
-           console.log("*");
+          document.write("*");
              i++;
       }
         </script>
