do while loop example

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
         <h1 onclick='javascript:alert(1);'' style="color:rebeccapurple;">Looping</h1>
     
       <script >
-         var  count = 100;
-         var i =0;
-        while(i<count) {
-          document.write("*");
-             i++;
-      }
+        do{
+            console.log(i);
+            i++;
+
+        }while(i<=10);
+        
         </script>
     </body>
 </html> 
