function using with parameters

--- a/index.html
+++ b/index.html
@@ -6,22 +6,13 @@
         </title>
     </head>
     <body>
-        <h1 onclick='javascript:alert(1);'' style="color:rebeccapurple;"> Print line</h1>
+        <h1 onclick='javascript:alert(1);'' style="color:rebeccapurple;"> sum of two numbers</h1>
     
       <script >
-       function paperline()
-       {
-           document.write("-------------------------------<br>")
-       }
-       paperline();
-       document.write("welcome to Javascript<br>");
-       paperline();
-       document.write("welcome to prigramming<br>");
-       paperline();
-
-       document.write("welcome toto easy programming<br>");
-
-       
+      function sum( a, b){
+          return a+b;
+      }
+       console.log (sum(20, 30));
         </script>
     </body>
 </html> 
