--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <body>
         <h1 onclick='javascript:alert(1);'' style="color:rebeccapurple;"> Function Arguments </h1>
     
-      <script >
-function(abc)
+<script >
+function abc()
 {
     xyz();
     console.log("this is abc")
 
 }
-function(xyz)
+function xyz()
 {
     console.log("this is xyz")
 }
