--- a/index.html
+++ b/index.html
@@ -6,22 +6,31 @@
         </title>
     </head>
     <body>
-        <h1 onclick='javascript:alert(1);'' style="color:rebeccapurple;"> Closure </h1>
+        <h1 onclick='javascript:alert(1);'' style="color:rebeccapurple;"> Closure 2</h1>
     
 <script >
-var a=10;
+
 function abc()
 {
-   var  a=20;
-   function xyz()
-   {
-alert(a);
-   }
-xyz();
+    this.x;
+    this.y;
+    this.set =function(a,b){
+    this.x=a;
+    this.y=b;
+    }
+this.display= function()
+{
+    alert(this.x+this.y)
+
 }
-abc();
+}
+var ob=new abc()
+ob.set(10,20);
+ob.display()
 
-
+var ob1= new abc()
+ob1.set(50,60);
+ob1.display();
 
 
 
