--- a/login.html
+++ b/login.html
@@ -14,11 +14,16 @@
         <input id="username" type="text" placeholder="username"> 
         <input id ="password" type="password" placeholder="password"> 
         <button id="LoginButtion"> Login</button>
+<button class="A"> Test Button</button>
+<select id=" op ">
 
-        <script>
+    <option> option 1</option>
+    <option> option 2</option>
+    <option> option 3</option>
+    <option> option 4</option>
+    <option> option 5</option>
 
-            <document.getElementById("username")
-        </script>
-      
+
+</select>
     </body>
 </html>   
