--- a/index.html
+++ b/index.html
@@ -6,31 +6,13 @@
         </title>
     </head>
     <body>
-        <h1 onclick='javascript:alert(1);'' style="color:rebeccapurple;"> Closure 2</h1>
+        <h1  style="color:rebeccapurple;"> Events</h1>
+        <input id ="txt" type="text" >
+        <button onclick= "javascript:alert( 'you pressed this button' );" id="btn">click </button>
+
     
 <script >
 
-function abc()
-{
-    this.x;
-    this.y;
-    this.set =function(a,b){
-    this.x=a;
-    this.y=b;
-    }
-this.display= function()
-{
-    alert(this.x+this.y)
-
-}
-}
-var ob=new abc()
-ob.set(10,20);
-ob.display()
-
-var ob1= new abc()
-ob1.set(50,60);
-ob1.display();
 
 
 
