button click event created using of function

--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
     <body>
         <h1  style="color:rebeccapurple;"> Events</h1>
         <input id ="txt" type="text" >
-        <button onclick= "javascript:alert( 'you pressed this button' );" id="btn">click </button>
+        <button onclick="buttonclick();" id="btn">click </button>
 
     
 <script >
 
 
 
-
+function buttonclick()
+{
+    alert("you clicked this button")
+}
 
 </script>
 
