--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 <script>
     
     document.getElementById("btn").addEventListener("click" , function (){
-        alert('call')
+        alert('call 1')
+
+    });
+     
+    document.getElementById("btn").addEventListener("click" , function (){
+        alert('call 2')
 
     });
     </script>
