--- a/index.html
+++ b/index.html
@@ -7,18 +7,13 @@
     </head>
     <body>
        
-<h1> Events</h1>
-<button id="btn"> click</button>
-<span id="counter">0</span>
-<script>
-    var count=0;
-    document.addEventListener("mousemove" , function (event){
-        console.log(event.clientX +"," +event.clientY)
-       
-    });
-  
-    </script>
-
+        <h1> Math</h1>
+        <script>
+            var a =10.5;
+            var b= Math.round(a);
+            alert(b);
+        </script>
+   
 
     </body>
 </html> 
