--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     </head>
     <body>
        
-        <h1> Math</h1>
+        <h1> Timer in javasript</h1>
         <script>
-            var a =10.5;
-            var b= Math.round(a);
-            alert(b);
+           setInterval (function(){
+               document.write("*")
+           },100)
         </script>
    
 
