--- a/Html Canvas/index.html
+++ b/Html Canvas/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-    <script src="script.js"></script>
+    <canvas id="canvas" style="border:solid 1px black">
+
+        </canvasid>
+        <script src=" script.js">
+        </script>
 </body>
 
 </html>
