html canvas outilne created

--- a/Html Canvas/index.html
+++ b/Html Canvas/index.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-    <canvas id="canvas" style="border:solid 1px black">
+    <canvas width=300 height=200 id="canvas" style="border:solid 1px black">
 
-        </canvasid>
-        <script src=" script.js">
-        </script>
+    </canvas>
+    <script src=" script.js">
+    </script>
 </body>
 
 </html>
