stroke rect example

--- a/Html Canvas/index.html
+++ b/Html Canvas/index.html
@@ -15,7 +15,7 @@
     <script>
         const canvas = document.getElementById("canvas");
         const cfx = canvas.getContext("2d")
-        cfx.fillRect(10, 10, 150, 100);
+        cfx.strokeRect(10, 10, 150, 100);
     </script>
 </body>
 
