style is setted

--- a/Html Canvas/index.html
+++ b/Html Canvas/index.html
@@ -14,8 +14,10 @@
     </canvas>
     <script>
         const canvas = document.getElementById("canvas");
-        const cfx = canvas.getContext("2d")
+        const cfx = canvas.getContext("2d");
+        cfx.fillStyle = "red";
         cfx.strokeRect(10, 10, 150, 100);
+        cfx.fillRect(10, 10, 150, 100);
     </script>
 </body>
 
