--- a/Html Canvas/index.html
+++ b/Html Canvas/index.html
@@ -24,9 +24,9 @@
         cfx.lineTo(200, 200);
         cfx.lineTo(250, 20);
         cfx.lineTo(150, 150);
-        cfx.strokeStyle = "yellow";
+        cfx.fillStyle = "yellow";
 
-        cfx.stroke();
+        cfx.fill();
 
     </script>
 </body>
