--- a/Html Canvas/index.html
+++ b/Html Canvas/index.html
@@ -15,11 +15,22 @@
     <script>
         const canvas = document.getElementById("canvas");
         const cfx = canvas.getContext("2d");
-
-        cfx.beginPath();
-        cfx.arc(100, 100, 40, 0, Math.PI * 2);
-        cfx.fill();
+        var x = 10;
+        var y = 10;
+        function animate() {
+            cfx.fillStyle = "white";
+            cfx.fillRect(0, 0, 300, 400);
+            cfx.fillStyle = "black";
+            x += 10;
+            y += 10;
+            cfx.beginPath();
+            cfx.arc(x, y, 40, 0, Math.PI * 2);
+            cfx.fill();
+            setTimeout(animate, 1000);
+        }
+        animate();
     </script>
+
 </body>
 
 </html>
