--- a/Html Canvas/index.html
+++ b/Html Canvas/index.html
@@ -15,11 +15,14 @@
     <script>
         const canvas = document.getElementById("canvas");
         const cfx = canvas.getContext("2d");
-        for (var i = 0; i < 6; ++i) {
-            for (var j = 0; j < 6; ++j) {
-                cfx.fillStyle = 'rgb(' + Math.floor(255 - 32.5 * i) + ',' + Math.floor(255 - 32.5 * j) + ',0)';
-                cfx.fillRect(j * 25, i * 25, 25, 25);
-            }
+        for (var i = 0; i < 10; i++) {
+
+            cfx.lineWidth = i + 1;
+            cfx.beginPath();
+            cfx.moveTo(5 + i * 14, 5);
+            cfx.lineTo(5 + i * 14, 140);
+            cfx.stroke();
+
         }
     </script>
 
