--- a/Html Canvas/index.html
+++ b/Html Canvas/index.html
@@ -15,15 +15,21 @@
     <script>
         const canvas = document.getElementById("canvas");
         const cfx = canvas.getContext("2d");
-        for (var i = 0; i < 10; i++) {
-
-            cfx.lineWidth = i + 1;
+        cfx.strokeStyle = "red";
+        cfx.beginPath();
+        cfx.moveTo(10, 10);
+        cfx.lineTo(140, 10);
+        cfx.stroke();
+        var lineCap = ['butt', 'round', 'square'];
+        for (var i = 0; i < lineCap.length; ++i) {
+            cfx.lineWidth = 15;
+            cfx.lineCap = lineCap[i];
             cfx.beginPath();
-            cfx.moveTo(5 + i * 14, 5);
-            cfx.lineTo(5 + i * 14, 140);
+            cfx.moveTo(25 + i * 50, 10)
+            cfx.lineTo(25 + i * 50, 140);
             cfx.stroke();
-
         }
+
     </script>
 
 </body>
