--- a/Painting App Js/index.html
+++ b/Painting App Js/index.html
@@ -9,7 +9,13 @@
 </head>
 
 <body>
+    <div class="controls">
+        <input type="color" id="color">
+        <input type="number" id="thickness">
+    </div>
+    <canvas id="canvas" width="500" height="500">
 
+    </canvas>
 </body>
 
 </html>
