--- a/Painting App Js/index.html
+++ b/Painting App Js/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="controls">
         <input type="color" id="color">
-        <input type="number" id="thickness">
+        <input type="number" id="thicknes">
     </div>
     <canvas id="canvas" width="500" height="500">
 
