--- a/progressive web app/index.html
+++ b/progressive web app/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
-    <script src="script.js"> </script>/body >
+
+    <h1>Progressive Web App</h1>
+    <script src="script.js">
+    </script>/body >
 
 </html>
