--- a/progressive web app/index.html
+++ b/progressive web app/index.html
@@ -11,7 +11,8 @@
 <body>
 
     <h1>Progressive Web App</h1>
-    <script src="script.js">
-    </script>/body >
+    <p> main paragraph ended
+        <script src="script.js">
+        </script>/body >
 
 </html>
