--- a/progressive web app/index.html
+++ b/progressive web app/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="=" #1009578>
+    <link rel="manifest" href=" manifest.json">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
@@ -12,7 +15,8 @@
 
     <h1>Progressive Web App</h1>
     <p> main paragraph ended
-        <script src="script.js">
-        </script>/body >
+        <script src=" script.js">
+        </script>
+</body>
 
 </html>
